updated the project to use basic example, still not woking, but a dirrerent error in runtime